Toggling responsive layout reloads the page to ensure viewport is reset and charts resize appropriately. Drop-down menu position now adapts to accommodate smaller screens and options for dark mode and responsive layout reflect current status (e.g. enabled or disabled) to make it obvious to the user whether they are already in responsive mode.

--- a/DnsServerCore/www/css/responsive.css
+++ b/DnsServerCore/www/css/responsive.css
@@ -623,6 +623,10 @@ body.dark-mode {
     width: calc(100% - 40px);
 }
 
+.dropdown-menu {
+    margin-left: -60px;
+}
+
 /* Mobile responsive styles (<768px) */
 @media (max-width: 767px) {
     #header .title {
@@ -754,6 +758,10 @@ body.dark-mode {
         width: 100% !important;
         padding-left: 0px !important;
         margin-top: 15px !important;
+    }
+
+    .dropdown-menu {
+        margin-left: -80px;
     }
 }
 
